# fcom

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
src/combiner/: mod.rs  template.rs
