[package]
name = "fcom"
authors = ["Pablo Carrera <pabloce@poscye.com>"]
version = "0.1.0"
edition = "2021"
description = "A Rust CLI tool that processes folders and files, combining their contents into a single output file."
license = "MIT"
repository = "https://github.com/pabl-o-ce/fcom"
keywords = ["cli", "files", "combine", "folder"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5.17", features = ["derive"] }

[[bin]]
name = "fcom"
path = "src/main.rs"
